WIP Per-stream state support for Postgres source